# masbayes

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: bayesa-wrapper.R  bayesr-wrapper.R  extendr-wrappers.R  matrix-wrapper.R  zzz.R
man/: construct_wah_matrix.Rd  genomicbayes-package.Rd  masbayes-package.Rd  run_bayesa.Rd  run_bayesa_mcmc.Rd  run_bayesr.Rd  run_bayesr_mcmc.Rd
src/: .gitignore  Makevars  Makevars.ucrt  Makevars.win  rust-wrapper.c
src/rust/: .gitignore  Cargo.toml
src/rust/src/: bayesa.rs  bayesa_em.rs  bayesr.rs  bayesr_em.rs  lib.rs  matrix.rs  types.rs  utils.rs  variance_tuning.rs
