[package]
name = "masbayes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "masbayes"

[dependencies]
extendr-api = "0.7"
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
statrs = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
